[package]
authors = ["Juliette Cordor <professional@maybejules.com>"]
edition = "2021"
name = "safenv"
version = "0.1.0"

[features]
default = ["std"]
parking_lot = ["dep:parking_lot", "once_cell/parking_lot"]
std = ["once_cell/std"]

[dependencies]
once_cell = { version = "1.19.0", default-features = false, features = [
    "alloc",
    "race",
] }
parking_lot = { version = "0.12.3", optional = true }
