[package]
authors = ["Juliette Cordor <professional@maybejules.com>"]
description = "A thread-safe wrapper around the standard library's `env` module"
documentation = "https://docs.rs/safenv"
edition = "2021"
homepage = "https://github.com/winpax/safenv"
license = "MIT OR Apache-2.0"
name = "safenv"
version = "0.1.0"

[features]
default = ["std"]
parking_lot = ["dep:parking_lot", "once_cell/parking_lot"]
std = ["once_cell/std"]

[[bench]]
harness = false
name = "env"

[dependencies]
once_cell = { version = "1.19.0", default-features = false, features = [
    "alloc",
    "race",
] }
parking_lot = { version = "0.12.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
