[package]
authors = ["Juliette Cordor <professional@maybejules.com>"]
description = "A thread-safe wrapper around the standard library's `env` module"
documentation = "https://docs.rs/safenv"
edition = "2021"
repository = "https://github.com/winpax/safenv"
license = "MIT OR Apache-2.0"
name = "safenv"
rust-version = "1.66.1"
version = "0.1.0"

[features]
parking_lot = ["dep:parking_lot"]

[[bench]]
harness = false
name = "env"

[dependencies]
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
